[gd_scene load_steps=3 format=3 uid="uid://ui_hud_001"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stats"]
bg_color = Color(0.1, 0.1, 0.15, 0.85)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopLeftButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 250.0
offset_bottom = 52.0
theme_override_constants/separation = 8

[node name="QuizButton" type="Button" parent="TopLeftButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
text = "üìù Quiz"

[node name="SettingsButton" type="Button" parent="TopLeftButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 36)
layout_mode = 2
text = "‚öôÔ∏è"

[node name="StatsButton" type="Button" parent="TopLeftButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 36)
layout_mode = 2
text = "üìä"

[node name="AchievementsButton" type="Button" parent="TopLeftButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 36)
layout_mode = 2
text = "üèÜ"

[node name="StatsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 140.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_stats")

[node name="VBox" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="StatsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üë§ Spieler
üìö 100 Punkte"

[node name="StatsLabel" type="Label" parent="StatsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "üìñ 1. Klasse
‚úÖ 0 richtig
üè† 0 Geb√§ude"

[node name="ToastContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
mouse_filter = 2

[node name="HintLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 16
text = "üí° Klicke auf einen NPC!"
horizontal_alignment = 1
vertical_alignment = 1
